[gd_scene load_steps=6 format=3 uid="uid://dr257bfej7hqq"]

[ext_resource type="Script" path="res://Skills/Scripts/AbilityInstance.gd" id="1_ti8iw"]
[ext_resource type="Script" path="res://Skills/SkillTargetingComponent.gd" id="2_je0nq"]
[ext_resource type="Script" path="res://Skills/DamageData.gd" id="3_bmpdl"]
[ext_resource type="Resource" uid="uid://ducb1h7rsn0ik" path="res://Units/Stats/STAT_Attack.tres" id="4_muil5"]
[ext_resource type="Resource" uid="uid://cu1bqlxnvyi1q" path="res://Units/Stats/STAT_Defense.tres" id="5_ag8qo"]

[node name="SK_LightMage_Auto" type="Node2D" node_paths=PackedStringArray("TargetingData", "DamageData")]
script = ExtResource("1_ti8iw")
loc_displayName = "Heal"
TargetingData = NodePath("TargetingComponent")
DamageData = NodePath("DamageComponent")

[node name="TargetingComponent" type="Node2D" parent="."]
script = ExtResource("2_je0nq")
TargetingFlags = 1

[node name="DamageComponent" type="Node2D" parent="."]
script = ExtResource("3_bmpdl")
AgressiveStat = ExtResource("4_muil5")
AgressiveModType = 2
AgressiveMod = -0.5
DefensiveStat = ExtResource("5_ag8qo")
DefensiveModType = 2
