[gd_scene load_steps=6 format=3 uid="uid://bvhsjuldac6fy"]

[ext_resource type="Script" path="res://Skills/Scripts/AbilityInstance.gd" id="1_rvot0"]
[ext_resource type="Script" path="res://Skills/SkillDamageComponent.gd" id="2_u8iid"]
[ext_resource type="Script" path="res://Skills/SkillTargetingComponent.gd" id="3_5xfjp"]
[ext_resource type="Resource" uid="uid://ducb1h7rsn0ik" path="res://Units/Stats/STAT_Attack.tres" id="3_10pd7"]
[ext_resource type="Resource" uid="uid://cu1bqlxnvyi1q" path="res://Units/Stats/STAT_Defense.tres" id="4_mcinh"]

[node name="GenericMelee" type="Node2D" node_paths=PackedStringArray("TargetingData", "DamageData")]
script = ExtResource("1_rvot0")
loc_displayName = "TEMP MELEE"
TargetingData = NodePath("SkillTargetingData")
DamageData = NodePath("DamageComponent")

[node name="DamageComponent" type="Node2D" parent="."]
script = ExtResource("2_u8iid")
AgressiveStat = ExtResource("3_10pd7")
DefensiveStat = ExtResource("4_mcinh")

[node name="SkillTargetingData" type="Node2D" parent="."]
script = ExtResource("3_5xfjp")
TargetingFlags = 1
